--- a/hiittimer.html
+++ b/hiittimer.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>HIIT Timer</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<style type="text/css">
 		
 /* GENERAL */
@@ -76,6 +77,10 @@ a { display: inline-block; color: black; outline: none; text-decoration: none; }
 
 		<div id="timer-site">
 			<h2 id="timer-name-header"></h2>
+
+			
+
+			<div class="timer-bar"></div>
 		</div>
 
 	</main>
