--- a/hiittimer.html
+++ b/hiittimer.html
@@ -17,7 +17,7 @@ main { max-width: 50em; padding-right: 1em; padding-left: 1em; margin: auto; }
 /* HEADER */
 
 header { width: 100%; height: 3em; background-color: #EE0000; }
-header h1, header h2 { display: inline-block; padding-left: 0.5em; padding-right: 0.5em; }
+header h1, header h2 { display: inline-block; padding-left: 0.5em; padding-right: 0.5em; white-space: nowrap; }
 header h1 { font-size: 3em; line-height: 1em; }
 header h2 { font-size: 1.5em; line-height: 2em; }
 
@@ -34,7 +34,7 @@ a { display: inline-block; color: black; outline: none; text-decoration: none; }
 
 #create-site .timer-bar { margin-top: 2em; }
 
-.placeholder { width: 100%; height: 3em; }
+.placeholder { width: 100%; height: 3em; margin-top: 2em; }
 
 #create-timer-button { position: fixed; bottom: 0; left: 0; width: 100vw; height: 3em; line-height: 3em; text-align: center; background-color: #EE0000; }
 #create-timer-button:hover { background-color: #D72527; }
@@ -49,7 +49,7 @@ a { display: inline-block; color: black; outline: none; text-decoration: none; }
 <body>
 	<header>
 		<h1>HIIT TIMER</h1>
-		<a id="create-site-link" href="#"><h2>create new</h2></a>
+		<a id="create-site-link" href="#"><h2>new</h2></a>
 	</header>
 
 
