--- a/hiittimer.html
+++ b/hiittimer.html
@@ -17,9 +17,10 @@ main { max-width: 50em; padding-right: 1em; padding-left: 1em; margin: auto; }
 /* HEADER */
 
 header { width: 100%; height: 3em; background-color: #EE0000; }
-header h1, header h2 { display: inline-block; padding-left: 0.5em; padding-right: 0.5em; white-space: nowrap; }
-header h1 { font-size: 3em; line-height: 1em; }
-header h2 { font-size: 1.5em; line-height: 2em; }
+header div { max-width: 50em; margin: auto; }
+header h1, header h2 { display: inline-block; white-space: nowrap; }
+header h1 { font-size: 2em; line-height: 1.5em; padding-left: 0.5em; }
+header h2 { font-size: 1.5em; line-height: 2em; padding: 0 0.5em; }
 
 a { display: inline-block; color: black; outline: none; text-decoration: none; }
 
@@ -41,15 +42,17 @@ a { display: inline-block; color: black; outline: none; text-decoration: none; }
 
 /* TIMER SITE */
 
-#timer-site h2 { text-align: center; font-size: 2em; }
+#timer-site h3 { text-align: center; font-size: 1.3em; }
 
 
 	</style>
 </head>
 <body>
 	<header>
-		<h1>HIIT TIMER</h1>
-		<a id="create-site-link" href="#"><h2>new</h2></a>
+		<div>
+			<h1>HIIT TIMER</h1>
+			<a id="create-site-link" href="#"><h2>new</h2></a>
+		</div>
 	</header>
 
 
@@ -76,7 +79,7 @@ a { display: inline-block; color: black; outline: none; text-decoration: none; }
 		</div>
 
 		<div id="timer-site">
-			<h2 id="timer-name-header"></h2>
+			<h3 id="timer-name-header"></h3>
 
 			
 
@@ -130,7 +133,8 @@ function showTimer(timer) {
 	id('create-site').style.display = 'none'
 	id('timer-site').style.display = 'initial'
 
-	id('timer-name-header').innerHTML = timer.name
+	id('timer-name-header').innerHTML = escapeHtml( timer.name )
+	fillTimerBar(timer)
 }
 
 function createTimer() {
@@ -178,6 +182,15 @@ function fillTimerBar(timer) {
 
 	const timerBars = document.getElementsByClassName('timer-bar')
 	for(let i=0; i < timerBars.length; i++) timerBars[i].innerHTML = result
+}
+
+function escapeHtml(unsafe) {
+	return unsafe
+		.replace(/&/g, "&amp;")
+		.replace(/</g, "&lt;")
+		.replace(/>/g, "&gt;")
+		.replace(/"/g, "&quot;")
+		.replace(/'/g, "&#039;")
 }
 
 window.addEventListener("hashchange", init)
