--- a/hiittimer.html
+++ b/hiittimer.html
@@ -13,6 +13,8 @@ main { max-width: 50em; padding-right: 1em; padding-left: 1em; margin: auto; }
 
 .timer-bar { height: 2em; width: 100%; border: 1px solid #ddd; }
 .timer-bar div { display: inline-block; height: 2em; }
+.timer-bar div:hover:after { position: absolute; margin-top: 2em; content: attr(tooltip); background-color: rgba(0,0,0,0.7); color: white; animation: fadein 0.5s; }
+@keyframes fadein { from { opacity: 0; } to { opacity: 1; } }
 
 /* HEADER */
 
@@ -44,6 +46,14 @@ a { display: inline-block; color: black; outline: none; text-decoration: none; }
 
 #timer-site h3 { text-align: center; font-size: 1.3em; }
 
+#timer-div { width: 100%; height: 12em; margin: 2em 0; background-color: #ccc; }
+#timer-div>div { display: block; width: 100%; }
+#timer-div-clock { height: 6em; }
+#timer-div-mid { height: 3em; }
+#timer-div-bottom { border-top: 1px solid white; }
+#timer-div-bottom div { display: inline-block; }
+#timer-div-bottom-reset, #timer-div-bottom-start { height: 1.5em; width: 1.5em; border-right: 1px solid white; font-size: 2em; text-align: center; line-height: 1.3em; color: #eee; cursor: pointer; user-select: none; }
+#timer-div-bottom-reset:hover, #timer-div-bottom-start:hover { color: #fff; }
 
 	</style>
 </head>
@@ -81,7 +91,15 @@ a { display: inline-block; color: black; outline: none; text-decoration: none; }
 		<div id="timer-site">
 			<h3 id="timer-name-header"></h3>
 
-			
+			<div id="timer-div">
+				<div id="timer-div-clock"></div>
+				<div id="timer-div-mid"></div>
+				<div id="timer-div-bottom">
+					<div id="timer-div-bottom-reset">⏹</div>
+					<div id="timer-div-bottom-start">▶</div>
+					<div id="timer-div-bottom-next"></div>
+				</div>
+			</div>
 
 			<div class="timer-bar"></div>
 		</div>
@@ -92,7 +110,9 @@ a { display: inline-block; color: black; outline: none; text-decoration: none; }
 	<script type="text/javascript">
 		
 let id = x => document.getElementById(x)
-let currentSite = 'create'
+const UPDATESPEED = 250
+let timerRunning = false;
+let timeElapsed = 0;
 
 init()
 
@@ -135,6 +155,9 @@ function showTimer(timer) {
 
 	id('timer-name-header').innerHTML = escapeHtml( timer.name )
 	fillTimerBar(timer)
+
+	timeElapsed = 0
+	timerRunning = false
 }
 
 function createTimer() {
@@ -172,16 +195,39 @@ function fillTimerBar(timer) {
 	const time = timer.warmup + timer.highII*timer.sets + timer.lowII*(timer.sets-1) + timer.cooldown
 
 	let result = '';
-	result += '<div style="width: '+timer.warmup/time*100+'%; background-color: yellow;" title="Warmup '+timer.warmup+'s"></div>'
-	result += '<div style="width: '+timer.highII/time*100+'%; background-color: red;" title="High Intensity '+timer.highII+'s"></div>'
+	result += '<div style="width: '+timer.warmup/time*100+'%; background-color: #F4DB17;" tooltip="Warmup '+timer.warmup+'s"></div>'
+	result += '<div style="width: '+timer.highII/time*100+'%; background-color: red;" tooltip="High Intensity '+timer.highII+'s"></div>'
 	for(let i=1; i < timer.sets; i++) {
-		result += '<div style="width: '+timer.lowII/time*100+'%; background-color: green;"title="Low Intensity '+timer.lowII+'s"></div>'
-		result += '<div style="width: '+timer.highII/time*100+'%; background-color: red;"title="High Intensity '+timer.highII+'s"></div>'
+		result += '<div style="width: '+timer.lowII/time*100+'%; background-color: green;" tooltip="Low Intensity '+timer.lowII+'s"></div>'
+		result += '<div style="width: '+timer.highII/time*100+'%; background-color: red;" tooltip="High Intensity '+timer.highII+'s"></div>'
 	}
-	result += '<div style="width: '+timer.cooldown/time*100+'%; background-color: yellow;" title="Cooldown '+timer.cooldown+'s"></div>'
+	result += '<div style="width: '+timer.cooldown/time*100+'%; background-color: #F4DB17;" tooltip="Cooldown '+timer.cooldown+'s"></div>'
 
 	const timerBars = document.getElementsByClassName('timer-bar')
 	for(let i=0; i < timerBars.length; i++) timerBars[i].innerHTML = result
+}
+
+function secondsToTimer(time) {
+	return ((time >= 3600) ? ~~(time/3600)+':' : '') + ('00' + ~~((time/60)%60)).substr(-2) + ':' + time%60 
+}
+
+function startStopTimer(){
+	timerRunning = !timerRunning
+	id('timer-div-bottom-start').innerHTML = timerRunning ? '⏸' : '▶'
+	if(timerRunning) updateTimer()
+}
+
+function updateTimer() {
+	if(!timerRunning) return
+
+	timeElapsed += UPDATESPEED;
+	id('timer-div-clock').innerHTML = secondsToTimer(time);
+
+	if(time > 0) setTimeout(updateTimer, UPDATESPEED)
+}
+
+function resetTimer() {
+	timeElapsed = 0;
 }
 
 function escapeHtml(unsafe) {
@@ -193,6 +239,8 @@ function escapeHtml(unsafe) {
 		.replace(/'/g, "&#039;")
 }
 
+id('timer-div-bottom-start').addEventListener('click', startStopTimer)
+id('timer-div-bottom-reset').addEventListener('click', resetTimer)
 window.addEventListener("hashchange", init)
 
 	</script>
