fixed margins; remembered things to do...

--- a/hiittimer.html
+++ b/hiittimer.html
@@ -41,8 +41,6 @@ a { display: inline-block; color: black; outline: none; text-decoration: none; }
 .input-pad { padding: 0.5em; padding-top: 0; }
 .inputs { display: block; width: 100%; height: 2em; font-size: 1em; line-height: 2em; text-align: center; margin-top: 0.2em; }
 
-#create-site .timer-bar { margin-top: 2em; }
-
 .placeholder { width: 100%; height: 3em; margin-top: 2em; }
 
 #create-timer-button { position: fixed; bottom: 0; left: 0; width: 100vw; height: 3em; line-height: 3em; text-align: center; background-color: #EE0000; }
@@ -50,7 +48,7 @@ a { display: inline-block; color: black; outline: none; text-decoration: none; }
 
 /* TIMER SITE */
 
-#timer-site h3 { text-align: center; font-size: 2em; margin-top: 0.5em; }
+#timer-site h3 { text-align: center; font-size: 2em; margin-top: 1em; }
 
 #timer-div { width: 100%; height: 16.5em; margin: 2em 0; background-color: #ccc; color: white; }
 #timer-div *::selection { background: none; color: #2D9CD5; }
@@ -64,6 +62,8 @@ a { display: inline-block; color: black; outline: none; text-decoration: none; }
 #timer-div-bottom-reset, #timer-div-bottom-start { width: 1.5em; border-right: 1px solid white; color: #eee; cursor: pointer; user-select: none; }
 #timer-div-bottom-reset:hover, #timer-div-bottom-start:hover { color: white; }
 #timer-div-bottom-next { cursor: pointer; }
+
+#timer-site .timer-bar { margin-top: 3em; }
 
 
 	</style>
