--- a/hiittimer.html
+++ b/hiittimer.html
@@ -50,10 +50,11 @@ a { display: inline-block; color: black; outline: none; text-decoration: none; }
 
 #timer-site h3 { text-align: center; font-size: 2em; margin-top: 1em; }
 
-#timer-div { width: 100%; height: 16.5em; margin: 2em 0; background-color: #ccc; color: white; }
+#timer-div { width: 100%; height: 18.5em; margin: 2em 0; background-color: #ccc; color: white; }
 #timer-div *::selection { background: none; color: #2D9CD5; }
 #timer-div *::-moz-selection { background: none; color: #2D9CD5; }
 #timer-div>div { display: block; width: 100%; }
+#timer-div-name { height: 1em; font-size: 2em; text-align: center; }
 #timer-div-clock { height: 1.25em; font-size: 6em; text-align: center; }
 #timer-div-mid { height: 3em; font-size: 1.5em; text-align: center; }
 #timer-div-mid>div { display: inline-block; width: 30%; }
@@ -106,16 +107,17 @@ a { display: inline-block; color: black; outline: none; text-decoration: none; }
 			<h3 id="timer-name-header"></h3>
 
 			<div id="timer-div" class="shadow">
+				<div id="timer-div-name"></div>
 				<div id="timer-div-clock">00:00</div>
 				<div id="timer-div-mid">
-					<div>elapsed:<br><span id="timer-div-mid-elapsed">00:00</span></div>
-					<div>round:<br><span id="timer-div-mid-round">0/0</span></div>
-					<div>remaining:<br><span id="timer-div-mid-remaining">00:00</span></div>
+					<div>elapsed<br><span id="timer-div-mid-elapsed">00:00</span></div>
+					<div>interval<br><span id="timer-div-mid-round">0/0</span></div>
+					<div>remaining<br><span id="timer-div-mid-remaining">00:00</span></div>
 				</div>
 				<table id="timer-div-bottom"><tr>
 					<td id="timer-div-bottom-reset">⏹</td>
 					<td id="timer-div-bottom-start">▶</td>
-					<td id="timer-div-bottom-next">next: asdf</td>
+					<td id="timer-div-bottom-next">next: ...</td>
 				</tr></table>
 			</div>
 
@@ -255,7 +257,7 @@ function timeToNextInterval() {
 function currentRound() {
 	
 	// finished
-	if(timeElapsed >= timerObj.time) return timerObj.sets
+	if(timeElapsed >= timerObj.time) return timerObj.sets*2+1
 	
 	// warmup
 	if(timeElapsed < timerObj.warmup) return 1
@@ -275,29 +277,29 @@ function currentRound() {
 function intervalType(elapTime = timeElapsed) {
 
 	// finished
-	if(elapTime >= timerObj.time) return 'finished'
+	if(elapTime >= timerObj.time) return 'Finished'
 	
 	// warmup
-	if(elapTime < timerObj.warmup) return 'warmup'
+	if(elapTime < timerObj.warmup) return 'Warmup'
 
 	// cooldown
-	if(elapTime >= timerObj.time-timerObj.cooldown) return 'cooldown'
+	if(elapTime >= timerObj.time-timerObj.cooldown) return 'Cooldown'
 
 	// high
 	const tmp = (elapTime-timerObj.warmup) % (timerObj.highII+timerObj.lowII)
-	if(tmp < timerObj.highII) return 'highII'
+	if(tmp < timerObj.highII) return 'High Intensity'
 
 	// low
-	return 'lowII'
+	return 'Low Intensity'
 }
 
 function intervalToColor(int){
 	switch(int){
-			case 'warmup':
-			case 'cooldown': return '#F4DB17'
-			case 'highII': return 'red'
-			case 'lowII': return '#23AB23'
-			case 'finished':
+			case 'Warmup':
+			case 'Cooldown': return '#F4DB17'
+			case 'High Intensity': return 'red'
+			case 'Low Intensity': return '#23AB23'
+			case 'Finished':
 			default: return '#ccc'
 		}
 }
@@ -310,9 +312,10 @@ function startStopTimer(){
 }
 
 function updateTimer() {
-	timeElapsed += UPDATESPEED/1000;
-
 	const time = timeToNextInterval()
+	
+	if(time > 0) timeElapsed += UPDATESPEED/1000;
+	else timeElapsed = timerObj.time;
 
 	id('timer-div-clock').innerHTML = secondsToTimer(time)
 	id('timer-div-mid-elapsed').innerHTML = secondsToTimer(timeElapsed)
@@ -320,6 +323,8 @@ function updateTimer() {
 	id('timer-div-mid-round').innerHTML = currentRound() + '/' + (timerObj.sets*2+1)
 	id('timer-div').style.backgroundColor = intervalToColor(intervalType())
 	id('timer-div-bottom-next').style.backgroundColor = intervalToColor(intervalType(timeElapsed+timeToNextInterval()))
+	id('timer-div-name').innerHTML = intervalType()
+	id('timer-div-bottom-next').innerHTML = intervalType(timeElapsed+timeToNextInterval())
 
 	if(time > 0 && timerRunning) curretTimerID = setTimeout(updateTimer, UPDATESPEED)
 }
@@ -335,6 +340,8 @@ function resetTimer() {
 	id('timer-div-bottom-start').innerHTML = '▶'
 	id('timer-div').style.backgroundColor = intervalToColor(intervalType())
 	id('timer-div-bottom-next').style.backgroundColor = intervalToColor(intervalType(timeElapsed+timeToNextInterval()))
+	id('timer-div-name').innerHTML = intervalType()
+	id('timer-div-bottom-next').innerHTML = intervalType(timeElapsed+timeToNextInterval())
 }
 
 function scipToNextInterval() {
