hopefully fixed an overflow problem on small screens

--- a/hiittimer.html
+++ b/hiittimer.html
@@ -58,11 +58,11 @@ a { display: inline-block; color: black; outline: none; text-decoration: none; }
 #timer-div-clock { height: 1.25em; font-size: 6em; text-align: center; }
 #timer-div-mid { height: 3em; font-size: 1.5em; text-align: center; }
 #timer-div-mid>div { display: inline-block; width: 30%; }
-#timer-div-bottom { width: 100%; border-top: 1px solid white; border-collapse: collapse; }
-#timer-div-bottom td { height: 1.5em; font-size: 3em; text-align: center; }
-#timer-div-bottom-reset, #timer-div-bottom-start { width: 1.5em; border-right: 1px solid white; color: #eee; cursor: pointer; user-select: none; }
+#timer-div-bottom { width: 100%; border-top: 1px solid white; border-collapse: collapse; height: 4.5em; }
+#timer-div-bottom td { height: 100%; text-align: center; }
+#timer-div-bottom-reset, #timer-div-bottom-start { width: 1.5em; font-size: 3em; border-right: 1px solid white; color: #eee; cursor: pointer; user-select: none; }
 #timer-div-bottom-reset:hover, #timer-div-bottom-start:hover { color: white; }
-#timer-div-bottom-next { cursor: pointer; }
+#timer-div-bottom-next { font-size: 2em; cursor: pointer; }
 
 #timer-site .timer-bar { margin-top: 3em; }
 
