google & lang tag

--- a/hiittimer.html
+++ b/hiittimer.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<title>HIIT Timer</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<meta name="description" content="Create your own HIIT Timer and share it using the URL; simple, open source and without site reloading!"/>
+	<meta name="google-site-verification" content="9dkG8aDDaWByu7fALVzEZJWL5vX2lf_2KJA58yh6DHI" />
 	<style type="text/css">
 		
 /* GENERAL */
