--- a/index.html
+++ b/index.html
@@ -42,8 +42,6 @@ a { display: inline-block; color: black; outline: none; text-decoration: none; }
 .input-pad { padding: 0.5em; padding-top: 0; }
 .inputs { display: block; width: 100%; height: 2em; font-size: 1em; line-height: 2em; text-align: center; margin-top: 0.2em; }
 
-.placeholder { width: 100%; height: 3em; margin-top: 2em; }
-
 #create-timer-button { position: fixed; bottom: 0; left: 0; width: 100vw; height: 3em; line-height: 3em; text-align: center; background-color: #EE0000; }
 #create-timer-button:hover { background-color: #D72527; }
 
@@ -67,6 +65,11 @@ a { display: inline-block; color: black; outline: none; text-decoration: none; }
 
 #timer-site .timer-bar { margin-top: 3em; }
 
+/* DESCRIPTION */
+
+#description-div { color: #999; margin: 4em 0; }
+#description-div a { color: #3ED1FF; }
+#description-div p { padding-top: 0.5em; }
 
 	</style>
 </head>
@@ -77,7 +80,6 @@ a { display: inline-block; color: black; outline: none; text-decoration: none; }
 			<a id="create-site-link" href="#"><h2>new</h2></a>
 		</div>
 	</header>
-
 
 	<main>
 		<div id="create-site">
@@ -100,7 +102,6 @@ a { display: inline-block; color: black; outline: none; text-decoration: none; }
 
 			<div class="timer-bar shadow"></div>
 
-			<div class="placeholder"></div>
 			<a id="create-timer-button" href="javascript:createTimer()">Create Timer <span id="create-timer-button-time"></span></a>
 		</div>
 
@@ -125,8 +126,17 @@ a { display: inline-block; color: black; outline: none; text-decoration: none; }
 			<div class="timer-bar shadow"></div>
 		</div>
 
-	</main>
+		<div id="description-div">
+			<p>
+				On this website you can create your own HIIT (high-Intensity interval training) workout timer. You can share your timer using the URL: just copy it and send the link to a friend.
+			</p>
+			<p>
+				The sourcecode of this project and further information can be found on <a href="https://github.com/JonasLoos/HIITTimer">Github</a>.
+			</p>
+		</div>
 
+	</main>
+	
 
 	<script type="text/javascript">
 "use strict"
