--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ a { display: inline-block; color: black; outline: none; text-decoration: none; }
 
 		<div id="description-div">
 			<p>
-				On this website you can create your own HIIT (high-Intensity interval training) workout timer. You can share your timer using the URL: just copy it and send the link to a friend.
+				On this website you can create your own HIIT (high-intensity interval training) workout timer. You can share your timer using the URL: just copy it and send the link to a friend.
 			</p>
 			<p>
 				The sourcecode of this project and further information can be found on <a href="https://github.com/JonasLoos/HIITTimer">Github</a>.
