--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<meta name="description" content="Create your own HIIT Timer and share it using the URL; simple, open source and without site reloading!"/>
 	<meta name="google-site-verification" content="9dkG8aDDaWByu7fALVzEZJWL5vX2lf_2KJA58yh6DHI" />
+	<link rel="shortcut icon" href="icon.png" type="image/png">
+	<link rel="icon" sizes="192x192" href="icon.png">
+	<link rel="apple-touch-icon-precomposed" sizes="192x192" href="icon.png">
+	<link rel="manifest" href="manifest.json">
 	<style type="text/css">
 		
 /* GENERAL */
@@ -128,7 +132,7 @@ a { display: inline-block; color: black; outline: none; text-decoration: none; }
 
 		<div id="description-div">
 			<p>
-				On this website you can create your own HIIT (high-Intensity interval training) workout timer. You can share your timer using the URL: just copy it and send the link to a friend.
+				On this website you can create your own HIIT (high-intensity interval training) workout timer. You can share your timer using the URL: just copy it and send the link to a friend.
 			</p>
 			<p>
 				The sourcecode of this project and further information can be found on <a href="https://github.com/JonasLoos/HIITTimer">Github</a>.
