--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 /* GENERAL */
 
 * { padding: 0; margin: 0; font-style: sans-serif; }
-main { max-width: 50em; padding-right: 1em; padding-left: 1em; margin: auto; }
+main { max-width: 50em; padding-right: 1em; padding-left: 1em; margin: auto; font-family: 'Saira Semi Condensed', sans-serif; }
 
 .shadow { box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.12), 0 6px 20px 0 rgba(0, 0, 0, 0.09); }
 
@@ -176,6 +176,7 @@ function init() {
 
 	const x = window.location.hash.slice(1)
 	window.scrollTo(0,0)
+	// check if the url contains a timer
 	if(x[0] == 'T') showTimer( dehash(x.slice(1)) )
 	else showCreate()
 
