--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ a { display: inline-block; color: black; outline: none; text-decoration: none; }
 				On this website you can create your own HIIT (high-intensity interval training) workout timer. You can share your timer using the URL: just copy it and send the link to a friend.
 			</p>
 			<p>
-				The sourcecode of this project and further information can be found on <a href="https://gitlab.com/JonasLoos/HIITTimer">GitLab</a>. Information about privacy can be found at <a href="https://jloos.de/privacy.html">jloos.de/privacy.html</a>.
+				The sourcecode of this project and further information can be found on <a href="https://gitlab.com/JonasLoos/HIITTimer">GitLab</a>. Information about privacy can be found at <a href="https://jloos.de/privacy.html" target="_blank">jloos.de/privacy.html</a>.
 			</p>
 		</div>
 
