new icon for everything

--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<meta name="description" content="Create your own HIIT Timer and share it using the URL; simple, open source and without site reloading!"/>
 	<meta name="google-site-verification" content="tUdt8GqRqP2b20z5UWEnRdaJb06PlDAVixKW5wSJyAA" />
-	<link rel="shortcut icon" href="icon.png" type="image/png">
-	<link rel="icon" sizes="192x192" href="icon.png">
-	<link rel="apple-touch-icon-precomposed" sizes="192x192" href="icon.png">
+
+	<link rel="icon" type="image/png" sizes="32x32" href="icon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="icon/favicon-16x16.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="icon/apple-touch-icon.png">
+	<link rel="mask-icon" href="icon/safari-pinned-tab.svg" color="#5bbad5">
+	<link rel="shortcut icon" href="favicon.ico">
+	<meta name="msapplication-TileColor" content="#00aba9">
+	<meta name="msapplication-config" content="icon/browserconfig.xml">
+	<meta name="theme-color" content="#ffffff">
+
 	<link rel="manifest" href="manifest.json">
 	<style type="text/css">
 		
